--- a/frontend/src/Pages/MonitoringPage/Monitor.css
+++ b/frontend/src/Pages/MonitoringPage/Monitor.css
@@ -229,7 +229,8 @@
   .bar {
     width: 100%;
     height: 5px;
-    background-color: #020202;
+    background-color: #EEB700;
+
     border-radius: 5px;
     transition: transform 0.3s ease, opacity 0.3s ease;
   }
