--- a/frontend/src/Pages/MonitoringPage/Monitor.css
+++ b/frontend/src/Pages/MonitoringPage/Monitor.css
@@ -81,6 +81,8 @@
     font-size: 70px;
     right: -1;
     color: #EEB700;
+    position: relative;
+    bottom: 30px;
 }
 .device-card .status {
     color: #f1c40f;
@@ -109,8 +111,11 @@
     font-weight:600;
 }
 .status-bar{
-    margin-top: 10px;
+    position: relative;
+    right: 9.5rem;
+    margin-bottom: 10px;
     min-width: 2em;
+    width: 3px;
     height: 1em;
     background-color: #34C759;
     border-radius: 18px;
@@ -188,6 +193,90 @@
 .monitor-title{
     display: none;
 }
+
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 20px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 2px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(15px);
+    -ms-transform: translateX(15px);
+    transform: translateX(15px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+    height: 15px;
+    width: 18px;
+  }
+
+  .geofence{
+    display: flex;
+    position: relative;
+    margin-left: 20px;
+    gap: 5px;
+  }
+
+  .geofence p{
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    margin-top: 8px;
+  }
+
+  .geofence label{
+    margin-top: 5px;
+  }
+
 @media (min-width: 320px) {
     .device-card {
         background-color: #1B1F2D;
