--- a/frontend/src/Pages/SettingsPage/Settings.css
+++ b/frontend/src/Pages/SettingsPage/Settings.css
@@ -103,20 +103,32 @@
     display: flex;
     flex-direction: column;
     gap: 1.5em;
+    /* border: 2px solid rebeccapurple; */
+    
 }
 .options-container span{
     color: #5F6368;
 }
-.options-container p{
-    margin-left: 1em;
+
+.options-content{
+    /* margin-left: 1em; */
     width: 80%;
     text-align: left;
+    /* border: 2px solid green; */
+    width: 100%;
+    height: 100%;
 }
 .option-div{
     width: 100%;
     display: flex;
     align-items: center;
+    cursor: pointer;
+    /* border: 2px solid green; */
 }
+.option-div p{
+    margin-left: 1em;
+}
+
 
 /* Modal overlay */
 .modal-overlay-mobile-num {
@@ -130,6 +142,7 @@
     justify-content: center;
     align-items: center;
     z-index: 1000;
+    /* border: 2px solid brown; */
 }
         
 /* Modal content */
@@ -142,18 +155,29 @@
     width: clamp(300px, 90%, 400px);
     text-align: center;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* border: 2px solid salmon; */
 }
 
 .modal-content-mobile-num h2 {
     font-size: 18px;
     margin-bottom: 10px;
+    border: 2px solid rebeccapurple;
+    width: 100%;
 }
         
 .modal-content-mobile-num p {
     font-size: 12px;
     color: #aaa; /* Light gray */
     margin-bottom: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid green;
+    width: 100%;
 }
         
 .modal-content-mobile-num input {
@@ -248,9 +272,14 @@
         border: none;
         border-radius: 10px;
         font-size: 14px;
-        font-weight: bold;
+        font-weight: bolder;
         cursor: pointer;
         transition: background-color 0.3s ease; /* Smooth hover effect */
+    }
+    
+    .pass-confirm-btn{
+        font-weight: bold;
+        /* font-size: 12px; */
     }
     
     /* Hover effect for button */
