--- a/frontend/src/Pages/LoginSignUpPage/LoginSignup.css
+++ b/frontend/src/Pages/LoginSignUpPage/LoginSignup.css
@@ -358,6 +358,11 @@
             color: white;
           }
           
+          .error-outline {
+            border: 2px solid #ed4337 !important;
+            outline: none;
+          }
+          
     
       
         @media (min-width: 320px) and (max-width: 424px){
