--- a/frontend/src/Pages/MonitoringPage/Monitor.css
+++ b/frontend/src/Pages/MonitoringPage/Monitor.css
@@ -57,8 +57,6 @@
 .device-card {
     background-color: #1B1F2D;
     border-radius: 8px;
-    padding: 10px;
-    margin-right: 10px;
     min-width: 270px; /* Reduce min-width to fit more cards in smaller screen */
     max-width: 200px;
     min-height: 120px;
@@ -70,19 +68,22 @@
     color: #fff;
     scroll-snap-align: center;
     box-sizing: border-box;
-    gap: 1em;
     font-size: 13px;
+    /* border: 1px solid green; */
 }
 .left_side{
     display: block;
     text-align: left;
+    /* border: 1px solid salmon; */
 }
+
 .right_side span{
-    font-size: 70px;
-    right: -1;
+    font-size: 75px;
     color: #EEB700;
     position: relative;
-    bottom: 30px;
+    bottom: 15px;
+    /* border: 1px solid salmon; */
+
 }
 .device-card .status {
     color: #f1c40f;
@@ -110,14 +111,18 @@
     font-size: 12px;
     font-weight:600;
 }
+.card-header{
+  /* border: 2px solid wheat; */
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 1em;
+}
 .status-bar{
-    position: relative;
-    right: 9.5rem;
-    margin-bottom: 10px;
     min-width: 2em;
     width: 3px;
     height: 1em;
-    background-color: #34C759;
+    /* background-color: #34C759; */
     border-radius: 18px;
 }
 
@@ -278,6 +283,13 @@
   }
 
 @media (min-width: 320px) {
+  .my-location-switch{
+    /* border: 1px solid salmon; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    
+  }
     .device-card {
         background-color: #1B1F2D;
         border-radius: 8px;
@@ -294,7 +306,7 @@
         color: #fff;
         scroll-snap-align: center;
         box-sizing: border-box;
-        gap: 1em;
+        /* gap: 1em; */
         font-size: 12px;
         font-weight: 600;
     }
@@ -306,8 +318,8 @@
     /* Base Menu Styles */
 #menu {
     position: fixed;
-    top: 10px;
-    left: 10px;
+    top: 50px;
+    right: 10px;
     z-index: 1000;
   }
   
@@ -356,7 +368,7 @@
   .nav {
     position: absolute;
     top: 50px;
-    left: 0;
+    right: 0;
     width: 200px;
     background-color: #1B1F2D;
     border-radius: 8px;
