--- a/frontend/src/Pages/LoginSignUpPage/LoginSignup.css
+++ b/frontend/src/Pages/LoginSignUpPage/LoginSignup.css
@@ -42,7 +42,7 @@
             margin-bottom: 30px;
             position: relative;
             top: 2rem;
-        
+            /* border: 1px solid salmon; */
         }
         
         .headersignup, .headerlogin{
@@ -205,7 +205,6 @@
             background-color: #D36C24;
             color: white;
         }
-    
         /* Forgot Password Link */
         .forgot-password-link {
             color: #ffc107;
@@ -353,9 +352,9 @@
             float: right;
             position: relative;
             font-size: 30px;
-            bottom: 1.5rem;
+            /* bottom: 1.5rem; */
             cursor: pointer;
-            color: white;
+            color: black;
           }
           
           .error-outline {
@@ -534,7 +533,7 @@
             display: flex;
             gap: 20px;
             top: 1rem;
-            color:white ;
+            color:#2C2E38 ;
             position: relative;
         }
     
