--- a/frontend/src/Pages/MonitoringPage/Monitor.css
+++ b/frontend/src/Pages/MonitoringPage/Monitor.css
@@ -1,6 +1,21 @@
 .test-body{
     background-color: #333741;
 }
+.TMLogo-container{
+  /* border: 2px solid red; */
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 40%;
+  height: 100%;
+}
+.TMLogo-container img{
+  width: 10em;
+  height: 100%;
+  object-fit: contain;
+  margin-right: 2em;
+  /* border: 2px solid blueviolet; */
+}
 .parent-container{
     display: flex;
     flex-direction: column;
@@ -197,6 +212,8 @@
 
 .monitor-title{
     display: none;
+    /* border: 2px solid green; */
+    
 }
 
 /* The switch - the box around the slider */
@@ -443,6 +460,7 @@
     }
     .History-container-mobile{
         display: none;
+        /* border: 2px solid blue; */
     }
 
     .navbar-container:hover .icon-text {
@@ -463,22 +481,44 @@
     .monitor-title{
         display: flex;
         flex-direction: row;
-        justify-content: flex-start;
+        justify-content: space-evenly;
         align-items: center;
         margin-top: 1em;
-        padding-left: 2em;
+        /* padding-left: 2em; */
         position: relative;
+        height: 10%;
     }
     .monitor-title h5{
         font-size: 1.5em;
         color: #BDBDBD;
     }
     .monitor-title img{
-        height: 50px;
-        width: 50px;
+        /* height: 50px; */
+        /* width: 50px; */
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
+    }
+    .title-text{
+      /* border: 2px solid blue; */
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      width: 30%;
+      height: 100%;
+      gap: 1em;
+    }
+    .motor-icon{
+      width: 15%;
+      height: 100%;
+      /* border: 2px solid red; */
+    }
+    .motor-icon img{
+      /* border: 2px solid purple; */
+      object-fit: contain;
+      width: 100%;
+      height: 100%;
     }
     .profile-icon-container {
         display: flex; /* Ensure flex layout */
@@ -642,11 +682,14 @@
 .History-container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     color: #BDBDBD;
     font-size: 18px;
     position: relative;
-    left: 5em;
+    /* left: 5em; */
+    height: 100%;
+    width: 30%;
+    /* border: 2px solid brown; */
     gap: 1em; /* Adding some spacing between elements */
 }
 
