--- a/frontend/src/Pages/WelcomePage/Welcomepage.css
+++ b/frontend/src/Pages/WelcomePage/Welcomepage.css
@@ -38,12 +38,16 @@
 .image-container {
     position: relative;
     margin: 60px 0;
+    /* border: 2px solid red; */
 }
+
 .image-container .motorbg {
     position: absolute;
     width: 90%;
     height: auto;
     bottom: 10px;
+    /* border: 2px solid green; */
+
 }
 
 .image-container .bike {
@@ -51,6 +55,8 @@
     width: 90%;
     height: auto;
     border-radius:10px;
+    /* border: 2px solid salmon; */
+
 }
 
 .image-container .location {
@@ -59,6 +65,8 @@
     height: 20%;
     left: 5px;
     border-radius: 50px;
+    /* border: 2px solid slateblue; */
+
 }
 
 
@@ -113,8 +121,19 @@
 
 .trackicon {
     position: relative;
-    width: auto; /* Default width */
+    width: auto;
     height: auto;
+}
+.TML{
+    /* border: 2px solid red; */
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+.TMLogo-container-welcome{
+    /* border: 2px solid blue; */
+    height: 20%;
+    width: 100%;
 }
 
 
@@ -131,11 +150,29 @@
         padding: 4px;
     
     }
+    .welcomepageheader{
+        /* border: 2px solid white; */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .TMLogo-container-welcome{
+        /* border: 2px solid blue; */
+        height: 10%;
+        width: 50%;
+    }
+    .TML{
+        /* border: 2px solid red; */
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
 
     .welcomepageheader h1 {
         font-size: 0.5rem;
         margin-bottom: 0.5rem;
-        margin-top: 3rem;
+        /* margin-top: 1rem; */
     }
 
     .welcomepageheader p {
@@ -220,6 +257,24 @@
 
     .Login-button-desktop, .SignUp-button-desktop{
         display: none;
+    }
+    .welcomepageheader{
+        /* border: 2px solid white; */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .TMLogo-container-welcome{
+        /* border: 2px solid blue; */
+        height: 10%;
+        width: 50%;
+    }
+    .TML{
+        /* border: 2px solid red; */
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
     }
 }
 
@@ -328,7 +383,7 @@
    }
 
    .welcomepageheader{
-       margin: 80px 20px 0 20px;
+       margin: 20px 20px 0 20px;
        width: 80%;
    }
 
@@ -395,7 +450,7 @@
         background-color: #FFC300;
         width: 70%;
         padding: 10px;
-        margin: 20px;
+        margin: 10px;
         font-size: 1rem;
         border-radius: 100px;
         transition: 0.3s ease;
@@ -430,8 +485,9 @@
    }
 
    .welcomepageheader{
-       margin: 80px 20px 0 20px;
+       margin: 5px 20px 0 20px;
        width: 80%;
+       /* border: 2px solid white; */
 
    }
 
@@ -489,7 +545,7 @@
         background-color: #FFC300;
         width: 70%;
         padding: 10px;
-        margin: 20px;
+        margin: 10px;
         font-size: 1rem;
         border-radius: 100px;
         transition: 0.3s ease;
@@ -508,7 +564,7 @@
         width: 20%;
         bottom: 25.5rem;
         left: 44rem;
-        
+        /* border: 2px solid blue; */
     }
 }
 
